--- a/css/style.scss
+++ b/css/style.scss
@@ -433,6 +433,7 @@ body{
 }
 
 .footr-cont{
+  font-family: 'Roboto Condensed', sans-serif;
   background-color: aquamarine;
   text-align: left;
   .made-by{
