--- a/css/style.scss
+++ b/css/style.scss
@@ -443,5 +443,19 @@ body{
   .credits-to{
     font-size: .85em;
     padding-bottom: 10px;
+    li a {
+      color: black;
+      text-decoration: none;
+      text-align: center;
+      padding: 0;
+      transition: all 0.4s ease-in-out;
+      cursor: pointer;
+      margin-bottom: 2px;
+    }
+    li a:hover {
+      color: #7B7C7C;
+      border-bottom: 2px solid #7B7C7C;
+      margin-bottom: 0;
+    }
   }
 }
