--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ body {
 
 .nav-cont {
   padding: 0; }
+  .nav-cont nav {
+    background-color: #F8F8F8; }
   .nav-cont nav button {
     border: 0; }
   .nav-cont nav li {
@@ -51,7 +53,7 @@ body {
       transition: all 0.4s ease-out; } }
 
 .hdr-cont {
-  background-color: aqua;
+  background-color: #2EC4B6;
   text-align: center; }
   .hdr-cont h1 {
     padding: 50px 0 20px 0; }
