--- a/css/style.css
+++ b/css/style.css
@@ -262,13 +262,13 @@ body {
   .pjct-cont .pjct-box .pjct-back-apple:hover .bckg-img-apple {
     opacity: 0; }
   .pjct-cont .pjct-box .brdr-bckg-l-txt-r {
-    border: 7px solid #157474;
+    border: 7px solid #2EC4B6;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px; }
   .pjct-cont .pjct-box .brdr-txt-l-bckg-r {
-    border: 7px solid #157474;
+    border: 7px solid #2EC4B6;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border-top-right-radius: 0;
