--- a/css/style.scss
+++ b/css/style.scss
@@ -381,14 +381,14 @@ body{
       }
     }
     .brdr-bckg-l-txt-r{
-      border: 7px solid rgb(21, 116, 116);
+      border: 7px solid #2EC4B6;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
       border-top-right-radius: 10px;
       border-bottom-right-radius: 10px;
     }
     .brdr-txt-l-bckg-r{
-      border: 7px solid rgb(21, 116, 116);
+      border: 7px solid #2EC4B6;
       border-top-left-radius: 10px;
       border-bottom-left-radius: 10px;
       border-top-right-radius: 0;
