--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,12 @@
     @content;
   }
 }
+
+@mixin sm-md-sizes{
+  @media only screen and (max-width:767px){
+    @content;
+  }
+}
 html{scroll-behavior:smooth}
 body{
   background-color: #F8F8F8;
@@ -131,7 +137,11 @@ body{
     background-color: #FF9F1C;
   }
 }
-
+@include sm-md-sizes() {
+ .pjct-title{
+  background-image: none!important;
+ }   
+}
 .pjct-title{
   background-color: blanchedalmond;
   background:url(../assets/images/flame-travel.png) no-repeat;
@@ -153,24 +163,29 @@ body{
     }
   }
 }
-
+@include tab-phone() {
+  .cntct-cont{
+   background-image: none!important;
+  }   
+ }
 .cntct-cont{
   background-color: blanchedalmond;
   background:url(../assets/images/flame-sign-up.png) no-repeat;
   background-position: right bottom;
-  background-size: 160px 100px;
+  background-size: 220px 160px;
   .cntct-box{
     background-color: blanchedalmond;
     background:url(../assets/images/flame-sentmessage.png) no-repeat;
     background-position: left top;
-    background-size: 150px 130px;
+    background-size: 200px 150px;
     .contacts{
+      text-align: center;
       h2{
         border-bottom: 7px solid #2EC4B6;
       }
       p{
-        text-align: center;
-        font-size: 1.5em;
+        width: 70%;
+        font-size: 2em;
         font-weight: bold;
       }
     }
@@ -475,6 +490,20 @@ body{
   font-family: 'Roboto Condensed', sans-serif;
   background-color: #2EC4B6;
   text-align: left;
+  @include tab-phone() {
+    .made-by{
+      background-color: blanchedalmond;
+      background:url(../assets/images/flame-4.png) no-repeat;
+      background-position: right 80% !important;
+      background-size: 220px 192px;
+    }   
+    .credits-to{
+      background-color: blanchedalmond;
+      background:url(../assets/images/flame-waiting.png) no-repeat;
+      background-position: 75% top !important;
+      background-size: 155px 122px;
+    }
+   }
   .made-by{
     background-color: blanchedalmond;
     background:url(../assets/images/flame-4.png) no-repeat;
