--- a/css/style.scss
+++ b/css/style.scss
@@ -137,8 +137,8 @@ body{
   }
   .sub-txt{
     h3{
-      font-size: 1.5em;
-      text-align: justify;
+      font-size: 1.35em;
+      text-align: left;
     }
     padding: 20px 20px 20px 20px;
   }
@@ -433,9 +433,9 @@ body{
         color: #E8EAE8;
       }
       p{
-        text-align: justify;
+        text-align: center;
         padding-bottom: 15px;
-        font-size: 1.3em;
+        font-size: 1.35em;
         color: #E8EAE8;
       }
       padding: 20px;
